--- a/Week 9/Cumulative 1/Cumulative 1/Views/Shared/_Layout.cshtml
+++ b/Week 9/Cumulative 1/Cumulative 1/Views/Shared/_Layout.cshtml
@@ -31,6 +31,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="TeacherPage" asp-action="List">Teacher</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="StudentPage" asp-action="List">Student</a>
+                        </li>
                     </ul>
                 </div>
             </div>
