--- a/Week 9/Cumulative 1/Cumulative 1/Views/TeacherPage/List.cshtml
+++ b/Week 9/Cumulative 1/Cumulative 1/Views/TeacherPage/List.cshtml
@@ -1,9 +1,22 @@
 ﻿@model IEnumerable<Cumulative_1.Models.Teacher>
 
+<form method="GET" action="/TeacherPage/List">
+    <div>
+        <label for="StartDate">Start Date:</label>
+        <input type="date" name="StartDate" />
+    </div>
+    <div>
+        <label for="EndDate">End Date:</label>
+        <input type="date" name="EndDate" />
+    </div>
+    <div>
+        <input type="submit" value="Search" />
+    </div>
+</form>
+
 @foreach (Cumulative_1.Models.Teacher Teacher in Model)
 {
     <div>
         <a href="/TeacherPage/Show/@Teacher.TeacherId">@Teacher.TeacherFName @Teacher.TeacherLName</a>
     </div>
 }
-
