--- a/Week 9/Cumulative 1/Cumulative 1/Views/CoursePage/Show.cshtml
+++ b/Week 9/Cumulative 1/Cumulative 1/Views/CoursePage/Show.cshtml
@@ -1,4 +1,4 @@
-﻿@model Cumulative_1.Models.Student
+﻿@model Cumulative_1.Models.Course
 
 <style>
     body {
@@ -65,25 +65,25 @@
 </style>
 
 <div class="container">
-    <h1>Student Details</h1>
+    <h1>Course Details</h1>
 
     <table>
         <thead>
             <tr>
-                <th>Student ID</th>
-                <th>First Name</th>
-                <th>Last Name</th>
-                <th>Student Number</th>
-                <th>Enrollment Date</th>
+                <th>Course Name</th>
+                <th>Course Code</th>
+                <th>Teacher ID</th>
+                <th>Start Date</th>
+                <th>Finish Date</th>
             </tr>
         </thead>
         <tbody>
             <tr>
-                <td>@Model.StudentId</td>
-                <td>@Model.StudentFName</td>
-                <td>@Model.StudentLName</td>
-                <td>@Model.StudentNumber</td>
-                <td>@Model.EnrollDate.ToString("yyyy-MM-dd")</td>
+                <td>@Model.coursename</td>
+                <td>@Model.coursecode</td>
+                <td>@Model.teacherid</td>
+                <td>@Model.startdate.ToString("yyyy-MM-dd")</td>
+                <td>@Model.finishdate.ToString("yyyy-MM-dd")</td>
             </tr>
         </tbody>
     </table>
